# zat

./: Cargo.toml  NOTICE.md  README.md  TODO.md  audit  compile  compile-test  dot-variables.schema.json  qclippy  qclippy-test  qcompile  qcompile-test  qcompile-test-w  qcompile-w  qrun-test  qrun-test-verbose  release-local.sh  run-test
.github/workflows/: build-linux.yml  build-mac.yml  release-linux.yml  release-mac.yml
docs/adrs/: 01-shell-hooks.md  02-remote-checkouts.md
docs/user-manual/: caveats.md  defining-a-template.md  getting-started.md  installation.md  other-options.md  repoistory-structure.md  repository-structure.md  usage.md  user-manual.md  what-is-a-project-templating-system.md
src/: aho_corasick_token_replacer.rs  behaviours.rs  cli.rs  config.rs  convert_case_filter_applicator.rs  default_directory_creator.rs  default_file_writer.rs  default_key_tokenizer.rs  default_template_config_validator.rs  default_template_enricher.rs  default_template_file_processor.rs  default_template_token_provider.rs  default_template_variable_expander.rs  default_template_variable_provider.rs  default_user_config_provider.rs  destination_file.rs  directory_creator.rs  enriched_default_template_file_processor.rs  enriched_template_file_processor.rs  file_chooser.rs  file_traverser.rs  file_writer.rs  filter_applicator.rs  key_tokenizer.rs  main.rs  models.rs  prod.rs  prod_context.rs  regex_file_chooser.rs  shared_models.rs  source_file.rs  template_config_validator.rs  template_enricher.rs  template_file_processor.rs  template_proc.rs  template_processor.rs  template_renderer.rs  template_selector.rs  template_token_provider.rs  template_variable_expander.rs  (+8 more)
src/args/: arg_supplier.rs  cli.rs  cli_arg_supplier.rs  default_user_config_provider.rs  mod.rs  target_directory.rs  test_util.rs  user_config_provider.rs
src/choice/: choice_error.rs  choice_runner.rs  choice_scope_filter.rs  choice_style.rs  default_choice_runner.rs  default_choice_scope_filter.rs  mod.rs  numbered_choice_style.rs  selected_choices.rs  selection_choice_style.rs
tests/: errors_integration_tests.rs  example_integration_tests.rs  file_differ.rs  integration_tests.rs
(+157 files in other folders)
