[package]
name = "zat"
version = "0.9.0"
edition = "2021"
authors = ["Sanj Sahayam"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2"
aho-corasick = "0.7"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
convert_case = "0.5"
clap = { version = "4.4", features = ["derive", "cargo", "env", "unicode"] }
regex = "1.7"
ansi_term = "0.12"
dirs = "5"
url = "2.5"
uuid = { version = "1.7.0", features = ["v1", "v3", "v4", "v5", "v6", "v7", "v8"] }

[dev-dependencies]
pretty_assertions = "1.0"
tempfile = "3.3"
assert_cmd = "2.0"
dir-diff="0.3"
similar="2.2"
predicates="3"
binaryornot = "1.0"
ansi_term = "0.12"
